--- a/Resources/py/overseas_studies.ipynb
+++ b/Resources/py/overseas_studies.ipynb
@@ -3068,6 +3068,259 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Abv</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>42.546245</td>\n",
+       "      <td>1.601554</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>23.424076</td>\n",
+       "      <td>53.847818</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AF</td>\n",
+       "      <td>33.939110</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AG</td>\n",
+       "      <td>17.060816</td>\n",
+       "      <td>-61.796428</td>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AI</td>\n",
+       "      <td>18.220554</td>\n",
+       "      <td>-63.068615</td>\n",
+       "      <td>Anguilla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>41.153332</td>\n",
+       "      <td>20.168331</td>\n",
+       "      <td>Albania</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AM</td>\n",
+       "      <td>40.069099</td>\n",
+       "      <td>45.038189</td>\n",
+       "      <td>Armenia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AN</td>\n",
+       "      <td>12.226079</td>\n",
+       "      <td>-69.060087</td>\n",
+       "      <td>Netherlands Antilles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AO</td>\n",
+       "      <td>-11.202692</td>\n",
+       "      <td>17.873887</td>\n",
+       "      <td>Angola</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AQ</td>\n",
+       "      <td>-75.250973</td>\n",
+       "      <td>-0.071389</td>\n",
+       "      <td>Antarctica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>AR</td>\n",
+       "      <td>-38.416097</td>\n",
+       "      <td>-63.616672</td>\n",
+       "      <td>Argentina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AS</td>\n",
+       "      <td>-14.270972</td>\n",
+       "      <td>-170.132217</td>\n",
+       "      <td>American Samoa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AT</td>\n",
+       "      <td>47.516231</td>\n",
+       "      <td>14.550072</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>AU</td>\n",
+       "      <td>-25.274398</td>\n",
+       "      <td>133.775136</td>\n",
+       "      <td>Australia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>AW</td>\n",
+       "      <td>12.521110</td>\n",
+       "      <td>-69.968338</td>\n",
+       "      <td>Aruba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>AZ</td>\n",
+       "      <td>40.143105</td>\n",
+       "      <td>47.576927</td>\n",
+       "      <td>Azerbaijan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>BA</td>\n",
+       "      <td>43.915886</td>\n",
+       "      <td>17.679076</td>\n",
+       "      <td>Bosnia and Herzegovina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>BB</td>\n",
+       "      <td>13.193887</td>\n",
+       "      <td>-59.543198</td>\n",
+       "      <td>Barbados</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>BD</td>\n",
+       "      <td>23.684994</td>\n",
+       "      <td>90.356331</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>BE</td>\n",
+       "      <td>50.503887</td>\n",
+       "      <td>4.469936</td>\n",
+       "      <td>Belgium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>BF</td>\n",
+       "      <td>12.238333</td>\n",
+       "      <td>-1.561593</td>\n",
+       "      <td>Burkina Faso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>BG</td>\n",
+       "      <td>42.733883</td>\n",
+       "      <td>25.485830</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>BH</td>\n",
+       "      <td>25.930414</td>\n",
+       "      <td>50.637772</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>BI</td>\n",
+       "      <td>-3.373056</td>\n",
+       "      <td>29.918886</td>\n",
+       "      <td>Burundi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>BJ</td>\n",
+       "      <td>9.307690</td>\n",
+       "      <td>2.315834</td>\n",
+       "      <td>Benin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Abv   latitude   longitude                 Country\n",
+       "0   AD  42.546245    1.601554                 Andorra\n",
+       "1   AE  23.424076   53.847818    United Arab Emirates\n",
+       "2   AF  33.939110   67.709953             Afghanistan\n",
+       "3   AG  17.060816  -61.796428     Antigua and Barbuda\n",
+       "4   AI  18.220554  -63.068615                Anguilla\n",
+       "5   AL  41.153332   20.168331                 Albania\n",
+       "6   AM  40.069099   45.038189                 Armenia\n",
+       "7   AN  12.226079  -69.060087    Netherlands Antilles\n",
+       "8   AO -11.202692   17.873887                  Angola\n",
+       "9   AQ -75.250973   -0.071389              Antarctica\n",
+       "10  AR -38.416097  -63.616672               Argentina\n",
+       "11  AS -14.270972 -170.132217          American Samoa\n",
+       "12  AT  47.516231   14.550072                 Austria\n",
+       "13  AU -25.274398  133.775136               Australia\n",
+       "14  AW  12.521110  -69.968338                   Aruba\n",
+       "15  AZ  40.143105   47.576927              Azerbaijan\n",
+       "16  BA  43.915886   17.679076  Bosnia and Herzegovina\n",
+       "17  BB  13.193887  -59.543198                Barbados\n",
+       "18  BD  23.684994   90.356331              Bangladesh\n",
+       "19  BE  50.503887    4.469936                 Belgium\n",
+       "20  BF  12.238333   -1.561593            Burkina Faso\n",
+       "21  BG  42.733883   25.485830                Bulgaria\n",
+       "22  BH  25.930414   50.637772                 Bahrain\n",
+       "23  BI  -3.373056   29.918886                 Burundi\n",
+       "24  BJ   9.307690    2.315834                   Benin"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_path=os.path.join(\"../data\",'country_lat_lng.csv')\n",
+    "csv=pd.read_csv(csv_path)\n",
+    "rank_df=pd.DataFrame(csv)\n",
+    "rank_df.head(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
